util: redirect stderr to stdout to spawn fewer threads; reuse BaseOutputReader (IDEA-CR-6825) (cherry picked from commit 34a34c9)